# eunis-habitat-classification

./: .gitignore  .pre-commit-config.yaml  LICENSE  Pipfile  README.md  pyproject.toml
notebooks/: 01_download_data.ipynb  02_schema_analysis.ipynb  03_merge_and_normalize.ipynb  04_detailed_eda.ipynb
scripts/: run_pipeline.py
src/: eunis_client.py
src/eunis_habitat_classifier.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
